--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "uuid": "^11.0.2"
   },
   "repository": {
     "url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
